Popup Modal added, dynamic info still needed, added image scale, project category refactor,

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
 			integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
 			crossorigin="anonymous"
-		/>
+		/> -->
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Personal Portolio created with React." />
 
@@ -27,7 +28,7 @@
     -->
 		<title>Darnell Sylvain</title>
 	</head>
-	<body>
+	<body id="body">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<!--
@@ -39,6 +40,11 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+	-->
+		<script
+			defer
+			src="https://kit.fontawesome.com/758ec0a39c.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
