--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- <link
+		<link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
 			integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
 			crossorigin="anonymous"
-		/> -->
+		/>
+
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="favicon_io/apple-touch-icon.png"
+			class="favicon"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="favicon_io/favicon-32x32.png"
+			class="favicon"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="favicon_io/favicon-16x16.png"
+			class="favicon"
+		/>
+		<!--
+		<link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Personal Portolio created with React." />
@@ -41,10 +64,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
 	-->
-		<script
+		<!-- <script
 			defer
 			src="https://kit.fontawesome.com/758ec0a39c.js"
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 	</body>
 </html>
